<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_itemImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_usernmaeItemPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="User name"
        android:textColor="@color/black"

        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_itemImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_contentPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/amiko"
        android:maxLength="100"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:textColor="#000000"
        android:textDirection="locale"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="84dp" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="12h"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_usernmaeItemPost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_usernmaeItemPost"
        app:layout_constraintTop_toBottomOf="@+id/tv_usernmaeItemPost" />


    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:background="#C9CCD1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/iv_iconComment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_iconComment"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_iconComment"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/tv_contentPost"
        app:srcCompat="@drawable/ic_baseline_comment_24" />

    <TextView
        android:id="@+id/tv_numberComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        app:layout_constraintBottom_toBottomOf="@+id/iv_iconComment"
        app:layout_constraintEnd_toStartOf="@+id/tv_tComment"
        app:layout_constraintTop_toTopOf="@+id/iv_iconComment"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_tComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/comments"
        app:layout_constraintBottom_toBottomOf="@+id/iv_iconComment"
        app:layout_constraintEnd_toStartOf="@+id/iv_iconComment"
        app:layout_constraintTop_toTopOf="@+id/iv_iconComment"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="193dp" />

    <ImageView
        android:id="@+id/iv_iconLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:tint="#4267B2"
        app:layout_constraintBottom_toBottomOf="@+id/iv_iconComment"
        app:layout_constraintStart_toStartOf="@+id/tv_contentPost"
        app:layout_constraintTop_toBottomOf="@+id/tv_contentPost"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@drawable/ic_twotone_thumb_up_24"
        tools:ignore="UseAppTint" />

    <TextView
        android:id="@+id/tv_numberLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="@+id/iv_iconLike"
        app:layout_constraintStart_toEndOf="@+id/iv_iconLike"
        app:layout_constraintTop_toTopOf="@+id/iv_iconLike"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@id/view3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/ib_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_twotone_thumb_up_24"
            android:drawableTint="#7A7A7A"
            android:focusable="true"
            android:text="@string/like"
            android:textColor="#7A7A7A"
            app:srcCompat="@drawable/ic_twotone_thumb_up_24"

            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/ib_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_baseline_comment_24"
            android:focusable="true"
            android:text="@string/comments_bt"
            android:textColor="#7A7A7A"
            app:srcCompat="@drawable/ic_baseline_comment_24"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="#C9CCD1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="268dp" />






</androidx.constraintlayout.widget.ConstraintLayout>